Fixed checkbox; Work on transform and fixed the broken CSS.

--- a/haxe/ui/extended/_module/styles/dark/main.css
+++ b/haxe/ui/extended/_module/styles/dark/main.css
@@ -8,21 +8,27 @@
 }
 
 .box {
+    background-color: none;
+}
+.vbox, .hbox{
     background-color: #1E1E1E;
 }
-
 .label {
     color: #D4D4D4;
 }
+.checkbox {
+    color: #D4D4D4;
+}
+.checkbox-value {
+    background-color: #1E1E1E;
+}
+.checkbox-value:selected {
+    icon: "img/check.png";
+    
+}
 
 .textfield {
-    color: white;
-    background-color: none;
-    border: none;
-    filter: none !important;
-    border-bottom-width: 2px;
-    border-bottom-color: #e2e2e2;
-    border-radius: 0;
+    color: #1E1E1E;
 }
 
 .textfield:active {
@@ -223,25 +229,6 @@
     color: white;
 }
 
-.checkbox {
-    width: auto;
-    height: auto;
-    horizontal-spacing: 4px;
-    cursor: pointer;
-    color: #CCCCCC;
-}
-
-.checkbox-value {
-    border: 1px solid #ABABAB;
-    background-color: #1e1e1e;
-    width: 16px;
-    height: 16px;
-    vertical-align: center;
-    border-radius: 2px;
-    icon: none;
-    filter: drop-shadow(1, 45, #888888, 0.2, 2, 2, 1, 3, true);
-    cursor: pointer;
-}
 
 
 
